--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -3,16 +3,17 @@
 <head>
     {% load static %}  
     
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="{% static 'users/css/navbar.css' %}">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}ReWork{% endblock %}</title>
-
-    <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    
 </head>
 <body>
 
-    {% include 'partials/navbar.html' %}
+    {% include 'users/partials/navbar.html' %}
 
     <div class="content">
         {% block content %}
