--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'users/base.html' %}
+{% load static %} 
+{% block css %}
 
-{% block title %}Dashboard - ReWork{% endblock %}
+{% endblock %}
 
 {% block content %}
 <div class="dashboard-container">
