--- a/users/templates/about.html
+++ b/users/templates/about.html
@@ -8,11 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
-<body class="about">
+<body class="about_body">
 
     {% include 'welcome_page_navbar.html' %}
-    <div class="container">
-        container
+    <div class="about_container">
+        <div class="about_inner_box">
+            <div class="about_image">
+                <img src="{% static 'images/person.png' %}" alt="person">
+            </div>
+            <div class="about_text">
+                <p>
+                    ReWork is ReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWork
+                    ReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWorkReWork
+                </p>
+               
+            </div>
+        </div>
     </div>
 
 </body>
