--- a/users/templates/contact_us.html
+++ b/users/templates/contact_us.html
@@ -8,9 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
-<body class="">
+<body class="contact_body">
 
     {% include 'welcome_page_navbar.html' %}
+    <div class="contact_container">
+        <form action="" class="contact_left">
+            <div class="contact_left_title">
+                <h2> Get in touch! We are here to help.</h2>
+            </div>
+            <input type="text" name="name" placeholder="Your Full Name" class="contact_inputs" required>
+            <input type="email" name="email" placeholder="Your Email" class="contact_inputs" required>
+            <textarea name="message" placeholder="Your Message" class="contact_inputs" required></textarea>
+            <button type="submit"> Send message </button>
+
+        </form>
+        <div class="contact_right">
+            <img src="{% static 'images/message.jpg' %}" alt="Contact Us">
+        </div>
+    </div>
+
 
 </body>
 </html>
