--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -9,6 +9,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}ReWork{% endblock %}</title>
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="{% static 'users/css/styles.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
 
